assets/custom.css
/* ... */
.quick-add__submit {
  text-transform: uppercase;
  background-color: transparent;
  font-weight: 600;
  font-size: 13px;
}

/* 
* Truspost Override CSS
*
 */
 .widget-review .ts-widget-avg-star.filled {
  color: #000;
 }

 @media (max-width: 468px) {
  #trustspot-widget-wrapper header p {
    font-size: 12px !important;
  }
  .widget-review .ts-widget-avg-star.filled {
    font-size: 18px;
  }
 }

.shop-pay-logo path {
  fill: red !important;
 }




 /* 
 * Drawer Menu
  */
  /* .menu-drawer {
    top: 0 !important;
  }
  .js .menu-drawer__navigation .submenu-open {
    position: relative;
  }
  .menu-drawer__close-button {
    margin: 0 !important;
  }
  .menu-drawer__inner-submenu .menu-drawer__menu {
    margin-top: 0 !important;
  } */

